package com.gzczy.design.model.adapter.classes;

/**
 * @Description 220V电源
 * @Author chenzhengyu
 * @Date 2020-12-01 16:39
 */
public class Voltage220V {

    public int elc220v(){
        System.out.println("220v~");
        return 220;
    }
}
